# solarsim

./: .gitignore  README.md  build.sh  buildimgui.sh  compile  compile.sh  meson.build  run.sh
glad/include/glad/: glad.h
glad/src/: glad.c
include/: callbacks.hpp  camera.hpp  gui.hpp  helper.hpp  mainloop.hpp  shaders.hpp  simulation.hpp  window.h
shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: callbacks.cpp  gui.cpp  helper.cpp  main.cpp  mainloop.cpp  shaders.cpp  simulation.cpp
